force-app/main/default/objects/Form_LCF_Trigger_Payment_1__c/Form_LCF_Trigger_Payment_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund Grant Management - Trigger Payments - 1.0</description>
    <label>Form LCF Trigger Payment 1.0</label>
    <nameField>
        <displayFormat>TPA-{000000}</displayFormat>
        <label>Trigger Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCF Grant Trigger Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>