force-app/main/default/objects/Form_LCF_Trigger_Payment_1__c/fields/grant_achievement__c.field-meta.xml
<CustomField>
    <fullName>grant_achievement__c</fullName>
    <description>Parent achievement block</description>
    <inlineHelpText>Parent achievement block</inlineHelpText>
    <label>Form LCF Grant Achievement Block 1.0</label>
    <referenceTo>Form_LCF_Grant_Achievement_1__c</referenceTo>
    <relationshipLabel>Trigger Payments</relationshipLabel>
    <relationshipName>trigger_payments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>