force-app/main/default/objects/Form_LCF_Trigger_Payment_1__c/fields/payment_trigger__c.field-meta.xml
<CustomField>
    <fullName>payment_trigger__c</fullName>
    <description>Parent payment trigger</description>
    <inlineHelpText>Parent payment trigger</inlineHelpText>
    <label>Form LCF Payment Trigger 1.0</label>
    <referenceTo>Form_LCF_Payment_Trigger_1__c</referenceTo>
    <relationshipLabel>Trigger Payments</relationshipLabel>
    <relationshipName>trigger_payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>