force-app/main/default/objects/Form_LCF_Trigger_Payment_1__c/fields/tp_claim_period__c.field-meta.xml
<CustomField>
    <fullName>tp_claim_period__c</fullName>
    <formula>RIGHT(TEXT(tp_period_start__c), 2)+"/"+MID(TEXT(tp_period_start__c), 6, 2)+"/"+LEFT(TEXT(tp_period_start__c), 4)
+ " TO " +
RIGHT(TEXT(tp_period_end__c), 2)+"/"+MID(TEXT(tp_period_end__c), 6, 2)+"/"+LEFT(TEXT(tp_period_end__c), 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Claim Period</inlineHelpText>
    <label>TP - Claim Period</label>
    <type>Text</type>
</CustomField>