force-app/main/default/objects/Form_LCF_Trigger_Payment_1__c/fields/tp_payment__c.field-meta.xml
<CustomField>
    <fullName>tp_payment__c</fullName>
    <inlineHelpText>Payment that has been triggered</inlineHelpText>
    <label>TP - Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>