force-app/main/default/objects/Form_LCF_Trigger_Payment_1__c/fields/tp_period_end__c.field-meta.xml
<CustomField>
    <fullName>tp_period_end__c</fullName>
    <formula>grant_achievement__r.ab_claim_period_end__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>End date</inlineHelpText>
    <label>TP - Period End</label>
    <type>Date</type>
</CustomField>