force-app/main/default/objects/Form_LCF_Trigger_Payment_1__c/fields/tp_period_start__c.field-meta.xml
<CustomField>
    <fullName>tp_period_start__c</fullName>
    <description>Page Title:Claim period</description>
    <formula>grant_achievement__r.ab_claim_period_start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Start date</inlineHelpText>
    <label>TP - Period Start</label>
    <type>Date</type>
</CustomField>