force-app/main/default/objects/Form_LCF_Trigger_Payment_1__c/fields/tp_trigger__c.field-meta.xml
<CustomField>
    <fullName>tp_trigger__c</fullName>
    <formula>payment_trigger__r.pt_description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment Trigger</inlineHelpText>
    <label>TP - Trigger</label>
    <type>Text</type>
</CustomField>